# CppCmakeTemplate

./: .directory  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  codecov.yml  conanfile.txt
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  main.cpp
cmake/: Documentation.cmake
docs/: Doxyfile.in
include/: ProjectConfig.h.in  my_lib.h
src/: CMakeLists.txt  my_lib.cpp
test/: CMakeLists.txt  main.cpp
